--- a/docker/php/local.ini
+++ b/docker/php/local.ini
@@ -1,24 +1,59 @@
-; Configurações de Performance PHP
-memory_limit = 512M
-max_execution_time = 300
-max_input_time = 300
+; Configurações de Performance PHP Otimizadas
+memory_limit = 1G
+max_execution_time = 60
+max_input_time = 60
 post_max_size = 100M
 upload_max_filesize = 100M
 max_file_uploads = 20
 
-; OPcache para melhor performance
+; OPcache para melhor performance (otimizado)
 opcache.enable = 1
 opcache.enable_cli = 1
-opcache.memory_consumption = 256
-opcache.interned_strings_buffer = 16
-opcache.max_accelerated_files = 10000
-opcache.revalidate_freq = 2
+opcache.memory_consumption = 512
+opcache.interned_strings_buffer = 32
+opcache.max_accelerated_files = 20000
+opcache.revalidate_freq = 0
+opcache.validate_timestamps = 0
 opcache.save_comments = 1
 opcache.enable_file_override = 1
+opcache.fast_shutdown = 1
+opcache.huge_code_pages = 1
 
-; Configurações de sessão
+; Configurações de sessão otimizadas
 session.gc_maxlifetime = 7200
 session.cache_expire = 180
+session.gc_probability = 1
+session.gc_divisor = 1000
+
+; Configurações de realpath cache
+realpath_cache_size = 4096K
+realpath_cache_ttl = 600
 
 ; Configurações de timezone
 date.timezone = Europe/Lisbon
+
+; Configurações de performance adicionais
+expose_php = Off
+log_errors = On
+display_errors = Off
+display_startup_errors = Off
+
+; Configurações de buffer
+output_buffering = 4096
+implicit_flush = Off
+
+; Configurações de arquivo
+file_uploads = On
+auto_detect_line_endings = Off
+
+; Configurações de variáveis
+variables_order = "GPCS"
+request_order = "GP"
+
+; Configurações de PHP-FPM otimizadas
+pm = dynamic
+pm.max_children = 50
+pm.start_servers = 10
+pm.min_spare_servers = 5
+pm.max_spare_servers = 20
+pm.max_requests = 1000
