--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,32 +1,53 @@
 [mysqld]
-# Configurações de Performance para Ambiente Local
-innodb_buffer_pool_size = 256M
-innodb_log_file_size = 64M
-innodb_flush_log_at_trx_commit = 2
+# Configurações de Performance Otimizadas para Ambiente Local
+innodb_buffer_pool_size = 512M
+innodb_log_file_size = 128M
+innodb_log_buffer_size = 32M
+innodb_flush_log_at_trx_commit = 0
 innodb_flush_method = O_DIRECT
+innodb_file_per_table = 1
+innodb_open_files = 400
 
-# Query Cache
-query_cache_type = 1
-query_cache_size = 32M
-query_cache_limit = 2M
+# Desabilitar Query Cache (deprecated no MySQL 8.0)
+# query_cache_type = OFF
 
-# Configurações de conexão
-max_connections = 100
-connect_timeout = 10
-wait_timeout = 600
-interactive_timeout = 600
+# Configurações de conexão otimizadas
+max_connections = 200
+connect_timeout = 5
+wait_timeout = 300
+interactive_timeout = 300
+net_read_timeout = 30
+net_write_timeout = 60
 
-# Configurações de buffer
-key_buffer_size = 32M
-table_open_cache = 1000
-sort_buffer_size = 2M
+# Configurações de buffer otimizadas
+key_buffer_size = 64M
+table_open_cache = 2000
+table_definition_cache = 1400
+sort_buffer_size = 4M
 read_buffer_size = 2M
-read_rnd_buffer_size = 8M
-myisam_sort_buffer_size = 64M
+read_rnd_buffer_size = 16M
+myisam_sort_buffer_size = 128M
+thread_cache_size = 50
+tmp_table_size = 64M
+max_heap_table_size = 64M
 
-# Logs (desabilitar para performance)
+# Configurações de InnoDB otimizadas
+innodb_buffer_pool_instances = 4
+innodb_thread_concurrency = 0
+innodb_read_io_threads = 8
+innodb_write_io_threads = 8
+innodb_io_capacity = 1000
+innodb_io_capacity_max = 2000
+
+# Logs (desabilitar para melhor performance)
 slow_query_log = 0
 general_log = 0
+log_bin = OFF
+sync_binlog = 0
+
+# Configurações de performance adicionais
+skip_name_resolve = 1
+performance_schema = OFF
 
 [mysql]
 default-character-set = utf8mb4
