--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,49 +1,156 @@
-server {
-    listen 80;
-    index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /var/www/public;
+# Configurações globais de performance
+worker_processes auto;
+worker_rlimit_nofile 65535;
+
+events {
+    worker_connections 1024;
+    use epoll;
+    multi_accept on;
+}
+
+http {
+    # Configurações básicas
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 1000;
+    types_hash_max_size 2048;
+    server_tokens off;
     
-    # Configurações de performance
+    # Configurações de buffer
+    client_body_buffer_size 128k;
     client_max_body_size 100M;
-    client_body_timeout 120s;
-    client_header_timeout 120s;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 4k;
+    output_buffers 1 32k;
+    postpone_output 1460;
     
-    # Gzip compression
+    # Timeouts otimizados
+    client_body_timeout 12;
+    client_header_timeout 12;
+    send_timeout 10;
+    
+    # Gzip compression otimizada
     gzip on;
     gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    gzip_min_length 1000;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json
+        application/xml
+        image/svg+xml;
     
-    # Cache para arquivos estáticos
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
+    # Brotli compression (se disponível)
+    # brotli on;
+    # brotli_comp_level 6;
+    # brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+    server {
+        listen 80;
+        index index.php index.html;
+        error_log /var/log/nginx/error.log warn;
+        access_log /var/log/nginx/access.log combined buffer=16k flush=2m;
+        root /var/www/public;
         
-        # Timeouts otimizados
-        fastcgi_read_timeout 300;
-        fastcgi_connect_timeout 300;
-        fastcgi_send_timeout 300;
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         
-        # Buffers otimizados
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
-    }
-    
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
+        # Cache para arquivos estáticos otimizado
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|webp)$ {
+            expires 1y;
+            add_header Cache-Control "public, no-transform, immutable";
+            add_header Vary "Accept-Encoding";
+            access_log off;
+            log_not_found off;
+            
+            # Compressão para arquivos estáticos
+            gzip_static on;
+            
+            # Otimização para imagens
+            location ~* \.(jpg|jpeg|png|gif|webp)$ {
+                add_header Cache-Control "public, no-transform, immutable";
+                expires 1y;
+            }
+        }
+        
+        # Cache para fontes
+        location ~* \.(woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+            access_log off;
+        }
+        
+        # Configuração PHP otimizada
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass app:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            
+            # Timeouts otimizados
+            fastcgi_read_timeout 60;
+            fastcgi_connect_timeout 60;
+            fastcgi_send_timeout 60;
+            
+            # Buffers otimizados para melhor performance
+            fastcgi_buffer_size 256k;
+            fastcgi_buffers 8 256k;
+            fastcgi_busy_buffers_size 512k;
+            fastcgi_temp_file_write_size 512k;
+            
+            # Cache de FastCGI
+            fastcgi_cache_bypass $skip_cache;
+            fastcgi_no_cache $skip_cache;
+            fastcgi_cache_valid 200 60m;
+            fastcgi_cache_valid 404 1m;
+        }
+        
+        # Configuração para arquivos Laravel
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+            gzip_static on;
+        }
+        
+        # Bloquear acesso a arquivos sensíveis
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+        
+        location ~ ~$ {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+        
+        # Otimização para robots.txt e favicon
+        location = /robots.txt {
+            access_log off;
+            log_not_found off;
+        }
+        
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
     }
 }
