--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,59 +1,4 @@
-# Configurações globais de performance
-worker_processes auto;
-worker_rlimit_nofile 65535;
-
-events {
-    worker_connections 1024;
-    use epoll;
-    multi_accept on;
-}
-
-http {
-    # Configurações básicas
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    keepalive_requests 1000;
-    types_hash_max_size 2048;
-    server_tokens off;
-    
-    # Configurações de buffer
-    client_body_buffer_size 128k;
-    client_max_body_size 100M;
-    client_header_buffer_size 1k;
-    large_client_header_buffers 4 4k;
-    output_buffers 1 32k;
-    postpone_output 1460;
-    
-    # Timeouts otimizados
-    client_body_timeout 12;
-    client_header_timeout 12;
-    send_timeout 10;
-    
-    # Gzip compression otimizada
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1000;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json
-        application/xml
-        image/svg+xml;
-    
-    # Brotli compression (se disponível)
-    # brotli on;
-    # brotli_comp_level 6;
-    # brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    
-    server {
+server {
         listen 80;
         index index.php index.html;
         error_log /var/log/nginx/error.log warn;
@@ -114,11 +59,11 @@ http {
             fastcgi_busy_buffers_size 512k;
             fastcgi_temp_file_write_size 512k;
             
-            # Cache de FastCGI
-            fastcgi_cache_bypass $skip_cache;
-            fastcgi_no_cache $skip_cache;
-            fastcgi_cache_valid 200 60m;
-            fastcgi_cache_valid 404 1m;
+            # Cache de FastCGI desabilitado por simplicidade
+            # fastcgi_cache_bypass $skip_cache;
+            # fastcgi_no_cache $skip_cache;
+            # fastcgi_cache_valid 200 60m;
+            # fastcgi_cache_valid 404 1m;
         }
         
         # Configuração para arquivos Laravel
@@ -152,5 +97,4 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
-    }
 }
